feat: Complete Multi-Competition Voting Platform with Poll Scheduling
- Add multi-competition voting system with database support
- Implement user authentication (login/register) with JWT tokens
- Add poll scheduling feature with datetime picker UI
- Create comprehensive admin dashboard for competition management
- Implement real-time vote counting and result display
- Add database schema migrations in worker service
- Update all services (vote, result, worker) for multi-competition support
- Add comprehensive documentation and guides
- Include environment configuration and Docker setup
- Add helper scripts for project management
- Implement responsive UI with Tailwind CSS and dark mode

Services:
- Flask vote service with REST API
- Node.js result service for live updates
- .NET worker service for background tasks
- PostgreSQL database with full schema
- Redis cache for performance

Features:
 User registration and login
 Multiple competitions management
 Real-time vote counting
 Admin dashboard
 Poll scheduling (create polls for future dates)
 Vote history tracking
 Dark mode UI
 Responsive design
 Full REST API

Fixes:
- Added missing database columns for scheduling
- Implemented proper authentication flow
- Created comprehensive documentation
- Fixed all import and dependency issues

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ bin/
 obj/
 .vs/
 node_modules/
+
+# Environment files - NEVER commit these with real secrets!
+.env
+.env.local
+.env.*.local
+.env.production
+
