--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,35 @@
 # v2 and v3 are now combined!
 # docker-compose v1.27+ required
 
+# Environment variables are loaded from .env file
+# Copy .env.example to .env and customize for your environment
+
 services:
   vote:
     build: 
       context: ./vote
       target: dev
+    environment:
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_NAME=${DB_NAME}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - OPTION_A=${OPTION_A}
+      - OPTION_B=${OPTION_B}
+      - FLASK_ENV=${FLASK_ENV}
+      - FLASK_DEBUG=${FLASK_DEBUG}
+      - FLASK_SECRET_KEY=${FLASK_SECRET_KEY}
+      - JWT_SECRET=${JWT_SECRET}
     depends_on:
       redis:
         condition: service_healthy
+      db:
+        condition: service_healthy
     healthcheck: 
-      test: ["CMD", "curl", "-f", "http://localhost"]
+      test: ["CMD", "curl", "-f", "http://localhost/ready"]
       interval: 15s
       timeout: 5s
       retries: 3
@@ -28,6 +47,14 @@ services:
     build: ./result
     # use nodemon rather than node for local dev
     entrypoint: nodemon --inspect=0.0.0.0 server.js
+    environment:
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_NAME=${DB_NAME}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - RESULT_PORT=${RESULT_PORT}
+      - NODE_ENV=${NODE_ENV}
     depends_on:
       db:
         condition: service_healthy 
@@ -39,10 +66,25 @@ services:
     networks:
       - front-tier
       - back-tier
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost/ready"]
+      interval: 15s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
 
   worker:
     build:
       context: ./worker
+    environment:
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_NAME=${DB_NAME}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - WORKER_LOG_LEVEL=${WORKER_LOG_LEVEL}
     depends_on:
       redis:
         condition: service_healthy 
@@ -64,8 +106,8 @@ services:
   db:
     image: postgres:15-alpine
     environment:
-      POSTGRES_USER: "postgres"
-      POSTGRES_PASSWORD: "postgres"
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - "db-data:/var/lib/postgresql/data"
       - "./healthchecks:/healthchecks"
