--- a/result/package.json
+++ b/result/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "method-override": "^3.0.0",
     "pg": "^8.8.0",
+    "redis": "^3.1.2",
     "socket.io": "^4.7.2",
     "stoppable": "^1.1.0"
   }
